   enables the use of map rules that are host-specific.  this is a significant
   change from the previous 3-line behavior, but it will not break existing
   map rules unless they depend on the line count.  having the host information
   also makes it easier to diagnose parsing issues when processing data.
* remove trailing newline from perfdata string.
* enable display of data sets from multiple rrd files into a single graph.
* prevent name clashes between data set names by using qualified identifiers
   rather than just data names in graph definitions.
* optionally report processing time.  processing time does *not* include the
   time required by showgraph.cgi to generate all of the graphs.
* optionally specify a default width and height.
* hostdb.conf and servdb.conf are now optional.  if these files are not 
   specified, or if they contain no entries, then data for every service
   (showhost.cgi) and data for every host (showservice.cgi) will be
   displayed.  use the hostdb and servdb files to filter graphs and
   control the order in which graphs are shown.
* started refactoring of code to eliminate redundant trips to disk for 
   host/service/dataset listings and to enable pattern matching in
   the *db.conf files.
* contents of README.map are now in INSTALL
* display rrdgraph and other error messages if GD is installed.  log the
   error messages whether or not GD is installed.
* do not create data directories unless we really have to do so (fixes a
   longstanding permissions bug)
* use separate cgi log file to avoid permissions conflicts.  attempt to
   fallback gracefully when permissions are not configured properly.
* consolidated log file initialization.
* refactored error handling and reporting, should be more consistent now.
* refer to 'new style' and 'old style' processing as 'batch' and 'immediate'
* removed fixedscale from GUI.  it remains as a cgi argument for backward
   compatibility, but it is better to define fixed scale using rrdopts.