@@ -1,13 +1,13 @@
-# service options for nagiosgraph
+# dataset options for nagiosgraph
 #
-# This file lists the default databases and datasets that should be selected
-# for each service.  If no databases or datasets are defined here for
-# a service, then all datasets for all databases for that service will be
+# This file lists the default databases and sources that should be selected
+# for each service.  If no databases or sources are defined here for
+# a service, then all sources for all databases for that service will be
 # selected by default.
 #
 # The format for each line is:
 #
-# service=name&db=database[,dataset][&db=database[,dataset][...]]
+# service=name&db=database[,ds-name][&db=database[,ds-name][...]]
 #
 # This file is optional.
 #
@@ -16,4 +16,5 @@
 #service=mem&db=real,total&db=real,used&db=real,warn&db=real,crit
 #service=net&db=data,byte-transmitted&db=data,byte-received
 #service=PING&db=pingrta
+#service=PING&db=loss,losspct,losswarn,losscrit
 #service=ntp&db=ntp,offset&db=ntp,jitter
