@@ -1,4 +1,4 @@
-# host options for nagiosgraph
+# group options for nagiosgraph
 # used by showgroup.cgi
 #
 # This file contains definitions of host and service groups - effectively 
@@ -12,12 +12,12 @@
 #
 # Each line has the following format:
 #
-# name=host,service[&label=text][&db=database[,dataset][&label=text]][...]
+# name=host,service[&label=text][&db=database[,ds-name][&label=text]][...]
 #
 # If no databases are specified, include all databases for the service.
-# If no datasets are specified, then include all datasets for the database.
+# If no sources are specified, then include all sources for the database.
 #
-# The labels apply to each corresponding dataset and override any globally
+# The labels apply to each corresponding source and override any globally
 # defined labels.
 #
 # These are examples.  Customize them to suit your configuration.
