@@ -7,12 +7,12 @@
 #
 # The format for each line is:
 #
-# service=name[&label=text][&db=database[,dataset][&label=text]][...]
+# service=name[&label=text][&db=database[,ds-name][&label=text]][...]
 #
 # If no databases are specified, include all databases for the service.
-# If no datasets are specified, then include all datasets for the database.
+# If no sources are specified, then include all sources for the database.
 #
-# The labels apply to each corresponding dataset and override any globally
+# The labels apply to each corresponding source and override any globally
 # defined labels.
 #
 # These are examples.  Customize them to suit your configuration.
