@@ -117,16 +117,16 @@ colors = D05050,D08050,D0D050,50D050,50D0D0,5050D0,D050D0,505050
 # Default line style (LINE1, LINE2, LINE3, AREA, TICK); see rrdgraph_graph
 plotas = LINE2
 
-# Line styles for specific data sets.  Comma-separated list of dataset names.
-# Any dataset with a name assigned to plotasX will get line style X.
+# Line styles for specific data sets.  Comma-separated list of data source
+# names.  Any source with a name assigned to plotasX will get line style X.
 plotasLINE1 = avg5min,avg15min
 plotasLINE2 = 
 plotasLINE3 =
 plotasAREA =
 plotasTICK = 
 
-# Specify line formats per dataset (dataset,linestyle,color).  For example,
-# this plots every dataset called 'crit' as thin red line:
+# Specify line formats per data source (ds-name,linestyle,color).  For example,
+# this plots every data source called 'crit' as a thin red line:
 #lineformat = crit,LINE1,D05050
 lineformat = warn,LINE1,D0D050;crit,LINE1,D05050;losswarn,LINE1,D0D050;losscrit,LINE1,D05050;rtawarn,LINE1,D0D050;rtacrit,LINE1,D05050
 
